--- a/drinks.html
+++ b/drinks.html
@@ -102,30 +102,35 @@
     <!-- /*Waldemars Section */ -->
   <main>
     <div class="container-fluid">
-      <div class="column justify-content-spacebetween">
-
+      <div class="justify-content-spacebetween">
         <div>
-          <img src="./img/caipirinha.jpg" alt="">
-          <h3 id="header">CAIPIRINHA </h3>
+          <div class="image-container">
+            <img src="./img/caipirinha.jpg" alt="">
           </div>
-          <div class="row">
+            <h3 id="header">CAIPIRINHA </h3>
+          </div>
           <div class="col-lg-6 col-md-6">
             <h4>Ingredients</h4>
             <ul>
-              300 ml ginger ale
-              120 ml passion fruit juice
-              4 limes
-              8 teaspoons of cane sugar
-              Mint to garnish
-              Crushed Ice
+              <li>300 ml ginger ale</li>
+              <li>120 ml passion fruit juice</li>
+              <li>4 limes</li>
+              <li>8 teaspoons of cane sugar</li>
+              <li>Mint to garnish</li>
+              <li>Crushed Ice</li>
             </ul>
+            <div class="col-lg-6 col-md-6">
+              <h4>Method</h4>
+              <p>First, wash the limes and cut each in 8 pieces. Fill the cane sugar into two glasses, add the limes and crush them. Now add the passion fruit juice and stir well. Finally, add the crushed ice and the ginger ale and garnish your mocktail with some mint! If you want to enjoy your Ipanema on the go or just want to prepare it beforehand, simply fill it into the TWEE vacuum bottle – it will keep it ice cold for hours!</p>
+            </div>
           </div>
-          <h4>Method</h4>
-          <p>First, wash the limes and cut each in 8 pieces. Fill the cane sugar into two glasses, add the limes and crush them. Now add the passion fruit juice and stir well. Finally, add the crushed ice and the ginger ale and garnish your mocktail with some mint! If you want to enjoy your Ipanema on the go or just want to prepare it beforehand, simply fill it into the TWEE vacuum bottle – it will keep it ice cold for hours!</p>
         </div>
 
         <div>
-          <img src="./img/ipanema.jpg" alt="">
+          <div class="image-container">
+            <img src="./img/ipanema.jpg" alt="">
+          </div>
+
           <h3 id="header">IPANEMA</h3>
           </div>
           <div class="row">
