--- a/drinks.html
+++ b/drinks.html
@@ -88,33 +88,63 @@
 
     <!-- /*Waldemars Section */ -->
     <main>
-      <div class="container-fluid">
-        <div class="column justify-content-spacebetween">
-          <div>
+      <div class="container-fluid row">
+        <div class="container col-lg-6 col-md-6">
+          <div class="row align-items-center justify-content-center">
             <img src="./img/caipirinha.jpg" alt="" />
             <h3 id="header">CAIPIRINHA</h3>
           </div>
-          <div class="row">
-            <div class="col-lg-6 col-md-6">
+          <div class="row align-items-start justify-content-center">
+            <div>
               <h4>Ingredients</h4>
               <ul>
                 300 ml ginger ale 120 ml passion fruit juice 4 limes 8 teaspoons
                 of cane sugar Mint to garnish Crushed Ice
               </ul>
             </div>
-            <h4>Method</h4>
-            <p>
-              First, wash the limes and cut each in 8 pieces. Fill the cane
-              sugar into two glasses, add the limes and crush them. Now add the
-              passion fruit juice and stir well. Finally, add the crushed ice
-              and the ginger ale and garnish your mocktail with some mint! If
-              you want to enjoy your Ipanema on the go or just want to prepare
-              it beforehand, simply fill it into the TWEE vacuum bottle – it
-              will keep it ice cold for hours!
-            </p>
+            <div>
+              <h4>Method</h4>
+              <p>
+                First, wash the limes and cut each in 8 pieces. Fill the cane
+                sugar into two glasses, add the limes and crush them. Now add
+                the passion fruit juice and stir well. Finally, add the crushed
+                ice and the ginger ale and garnish your mocktail with some mint!
+                If you want to enjoy your Ipanema on the go or just want to
+                prepare it beforehand, simply fill it into the TWEE vacuum
+                bottle – it will keep it ice cold for hours!
+              </p>
+            </div>
           </div>
-
-          <div>
+        </div>
+        <div class="container col-lg-6 col-md-6">
+          <div class="row align-items-center justify-content-center">
+            <img src="./img/caipirinha.jpg" alt="" />
+            <h3 id="header">CAIPIRINHA</h3>
+          </div>
+          <div class="row align-items-start justify-content-center">
+            <div>
+              <h4>Ingredients</h4>
+              <ul>
+                300 ml ginger ale 120 ml passion fruit juice 4 limes 8 teaspoons
+                of cane sugar Mint to garnish Crushed Ice
+              </ul>
+            </div>
+            <div>
+              <h4>Method</h4>
+              <p>
+                First, wash the limes and cut each in 8 pieces. Fill the cane
+                sugar into two glasses, add the limes and crush them. Now add
+                the passion fruit juice and stir well. Finally, add the crushed
+                ice and the ginger ale and garnish your mocktail with some mint!
+                If you want to enjoy your Ipanema on the go or just want to
+                prepare it beforehand, simply fill it into the TWEE vacuum
+                bottle – it will keep it ice cold for hours!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div>
             <img src="./img/ipanema.jpg" alt="" />
             <h3 id="header">IPANEMA</h3>
           </div>
@@ -128,9 +158,7 @@
             </div>
             <h4>Method</h4>
             <p>Lorem iosum</p>
-          </div>
-        </div>
-      </div>
+          </div> -->
     </main>
 
     <script
