added nav-functionality to index + recipe names

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="./styles/home.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cuisine a la Group 1</title>
   </head>
   <body>
     <!--Stefan Section-->
     <div id="mainNavbar">
       <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo" src="./img/121054.png" alt="" />
         </a>
         <button
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -52,8 +52,10 @@
                 Starters
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Starter1</a>
-                <a class="dropdown-item" href="#">Starter2</a>
+                <a class="dropdown-item" href="bacondate.html">Bacon & Dates</a>
+                <a class="dropdown-item" href="mushrooms.html"
+                  >Stuffed Mushrooms</a
+                >
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -69,8 +71,12 @@
                 Mains
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Main1</a>
-                <a class="dropdown-item" href="#">Main2</a>
+                <a class="dropdown-item" href="rigatonigenovese.html"
+                  >Rigatoni alla genovese</a
+                >
+                <a class="dropdown-item" href="juicychicken.html"
+                  >Juicy roasted chicken</a
+                >
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -86,8 +92,12 @@
                 Desserts
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Dessert1</a>
-                <a class="dropdown-item" href="#">Dessert2</a>
+                <a class="dropdown-item" href="cheesecake.html"
+                  >Cheesecake Bites</a
+                >
+                <a class="dropdown-item" href="cremerulete.html"
+                  >creme brulee</a
+                >
               </div>
             </li>
             <li class="nav-item">
@@ -105,78 +115,84 @@
       <div class="grid container-fluid">
         <div class="row">
           <div class="recipe-container col-lg-4">
-            <a href="#">
+            <a href="bacondate.html">
               <div class="img-container">
                 <img src="./img/placeholder-1.jpg" alt="food" />
               </div>
-              <h2>Recipe Name</h2>
+              <h2>Bacon & Dates</h2>
             </a>
           </div>
 
           <div class="recipe-container col-lg-4">
-            <a href="#">
+            <a href="mushrooms.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img
+                  src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7638987.jpg"
+                  alt="food"
+                />
               </div>
-              <h2>Recipe Name</h2>
+              <h2>Stuffed Mushrooms</h2>
             </a>
           </div>
 
           <div class="recipe-container col-lg-4">
-            <a href="#">
+            <a href="rigatonigenovese.html">
               <div class="img-container">
                 <img src="./img/placeholder-2.jpg" alt="food" />
               </div>
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="recipe-container col-lg-4">
-            <a href="#">
-              <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
-              </div>
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-
-          <div class="recipe-container col-lg-4">
-            <a href="#">
-              <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
-              </div>
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-
-          <div class="recipe-container col-lg-4">
-            <a href="#">
-              <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
-              </div>
-              <h2>Recipe Name</h2>
+              <h2>Rigatoni Alla Genovese</h2>
             </a>
           </div>
         </div>
 
         <div class="row">
           <div class="recipe-container col-lg-4">
-            <a href="#">
+            <a href="juicychicken.html">
               <div class="img-container">
                 <img src="./img/placeholder-2.jpg" alt="food" />
               </div>
-              <h2>Drink Name</h2>
+              <h2>Juicy Roasted Chicken</h2>
             </a>
           </div>
 
           <div class="recipe-container col-lg-4">
-            <a href="#">
+            <a href="cheesecake.html">
               <div class="img-container">
                 <img src="./img/placeholder-2.jpg" alt="food" />
               </div>
-              <h2>Drink Name</h2>
+              <h2>Chocolate Peppermint Cheesecake Bites</h2>
+            </a>
+          </div>
+
+          <div class="recipe-container col-lg-4">
+            <a href="cremerulete.html">
+              <div class="img-container">
+                <img
+                  src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7753673.jpg"
+                  alt="food"
+                />
+              </div>
+              <h2>Creme Brulee</h2>
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="recipe-container col-lg-4">
+            <a href="drinks.html">
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
+              <h2>Classic Old Fashioned</h2>
+            </a>
+          </div>
+
+          <div class="recipe-container col-lg-4">
+            <a href="drinks.html">
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
+              <h2>Moscow Mule</h2>
             </a>
           </div>
 
