--- a/drinks.html
+++ b/drinks.html
@@ -91,74 +91,60 @@
       <div class="container-fluid row">
         <div class="container col-lg-6 col-md-6">
           <div class="row align-items-center justify-content-center">
-            <img src="./img/caipirinha.jpg" alt="" />
-            <h3 id="header">CAIPIRINHA</h3>
+            <div class="image-container">
+              <img src="./img/Classic Old Fashioned.webp" alt="" />
+            </div>
+            <h3 id="header">Classic Old Fashioned</h3>
           </div>
           <div class="row align-items-start justify-content-center">
             <div>
               <h4>Ingredients</h4>
               <ul>
-                300 ml ginger ale 120 ml passion fruit juice 4 limes 8 teaspoons
-                of cane sugar Mint to garnish Crushed Ice
+                <li>2 teaspoons simple syrup</li>
+                <li>1 teaspoon water</li>
+                <li>2 dashes bitter</li>
+                <li>1 cup ice cubes</li>
+                <li>1 jigger bourbon</li>
+                <li>1 slice orange</li>
+                <li>1 maraschino cherry</li>
               </ul>
             </div>
             <div>
               <h4>Method</h4>
               <p>
-                First, wash the limes and cut each in 8 pieces. Fill the cane
-                sugar into two glasses, add the limes and crush them. Now add
-                the passion fruit juice and stir well. Finally, add the crushed
-                ice and the ginger ale and garnish your mocktail with some mint!
-                If you want to enjoy your Ipanema on the go or just want to
-                prepare it beforehand, simply fill it into the TWEE vacuum
-                bottle – it will keep it ice cold for hours!
+                Pour the simple syrup, water, bitters into a whiskey glass. Stir to combine, then place the ice cubes in the glass. Pour bourbon over the ice and garnish with the prange slice  and maraschino cherry.
               </p>
             </div>
           </div>
         </div>
         <div class="container col-lg-6 col-md-6">
-          <div class="row align-items-center justify-content-center">
-            <img src="./img/caipirinha.jpg" alt="" />
-            <h3 id="header">CAIPIRINHA</h3>
-          </div>
-          <div class="row align-items-start justify-content-center">
-            <div>
-              <h4>Ingredients</h4>
-              <ul>
-                300 ml ginger ale 120 ml passion fruit juice 4 limes 8 teaspoons
-                of cane sugar Mint to garnish Crushed Ice
+            <div class="row align-items-center justify-content-center">
+              <div class="image-container">
+                <div class="image-container">
+                  <img src="./img/Simple Moscow Mule .webp" alt="" />
+                </div>
+                <h3 id="header">SIMPLE MOSCOW MULE</h3>
+            </div>
+            <div class="row align-items-start justify-content-center">
+              <div>
+                <h4>Ingredients</h4>
+                <ul>
+                  <li>ice </li>
+                  <li>1/2 fresh lime</li>
+                <li>2 fluid ounces vodka</li>
+                <li>4 fluid ounces ginger beer, or to taste</li>
+                <li>2 lime slices</li>
               </ul>
             </div>
             <div>
               <h4>Method</h4>
               <p>
-                First, wash the limes and cut each in 8 pieces. Fill the cane
-                sugar into two glasses, add the limes and crush them. Now add
-                the passion fruit juice and stir well. Finally, add the crushed
-                ice and the ginger ale and garnish your mocktail with some mint!
-                If you want to enjoy your Ipanema on the go or just want to
-                prepare it beforehand, simply fill it into the TWEE vacuum
-                bottle – it will keep it ice cold for hours!
+                Fill a tall glass with ice. Squeeze 1/2 lime over ice. Pour vodka over ice and top with ginger beer. Garnish with lime slices.
               </p>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div>
-            <img src="./img/ipanema.jpg" alt="" />
-            <h3 id="header">IPANEMA</h3>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-md-6">
-              <h4>Ingredients</h4>
-              <ul>
-                120 ml passion fruit juice 4 limes 8 teaspoons of cane sugar
-                Mint to garnish Crushed Ice
-              </ul>
-            </div>
-            <h4>Method</h4>
-            <p>Lorem iosum</p>
-          </div> -->
     </main>
 
     <script
