home page image linking

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="recipe-container col-lg-4">
             <a href="bacondate.html">
               <div class="img-container">
-                <img src="./img/placeholder-1.jpg" alt="food" />
+                <img src="./img/dates.jpg" alt="food" />
               </div>
               <h2>Bacon & Dates</h2>
             </a>
@@ -126,10 +126,7 @@
           <div class="recipe-container col-lg-4">
             <a href="mushrooms.html">
               <div class="img-container">
-                <img
-                  src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7638987.jpg"
-                  alt="food"
-                />
+                <img src="img/mushrooms.jpg" alt="food" />
               </div>
               <h2>Stuffed Mushrooms</h2>
             </a>
@@ -138,7 +135,7 @@
           <div class="recipe-container col-lg-4">
             <a href="rigatonigenovese.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img src="./img/rigatoni.jpg" alt="food" />
               </div>
               <h2>Rigatoni Alla Genovese</h2>
             </a>
@@ -149,7 +146,7 @@
           <div class="recipe-container col-lg-4">
             <a href="juicychicken.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img src="./img/chicken.jpg" alt="food" />
               </div>
               <h2>Juicy Roasted Chicken</h2>
             </a>
@@ -158,7 +155,7 @@
           <div class="recipe-container col-lg-4">
             <a href="cheesecake.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img src="./img/cheesecake.jpg" alt="food" />
               </div>
               <h2>Chocolate Peppermint Cheesecake Bites</h2>
             </a>
@@ -167,10 +164,7 @@
           <div class="recipe-container col-lg-4">
             <a href="cremerulete.html">
               <div class="img-container">
-                <img
-                  src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7753673.jpg"
-                  alt="food"
-                />
+                <img src="img/brulee.jpg" alt="food" />
               </div>
               <h2>Creme Brulee</h2>
             </a>
