--- a/cheesecake.html
+++ b/cheesecake.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/recipe.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chocolate Peppermint Cheesecake Bites</title>
   </head>
 
   <body>
@@ -103,67 +103,75 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img
-            id="pic"
-            src="http://images.media-allrecipes.com/userphotos/560x315/3489951.jpg"
-            alt=""
-          />
+          <img id="pic" src="img/cheesecake.jpg" alt="" />
           <div class="col-lg-10 justify-content-center row align-items-center">
-            <h3 id="head">Rigatoni alla Genovese</h3>
+            <h3 id="head">Chocolate Peppermint Cheesecake Bites</h3>
           </div>
         </div>
 
         <div class="row align-items-start justify-content-center">
           <div class="col-lg-6 col-md-6">
             <section class="bordered">
-            <h4>Ingredients</h4>
-            <br /><br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
+              <h4>Ingredients</h4>
+              <ul>
+                <li>2 cups chocolate wafer crumbs</li>
+                <li>1/2 cup butter, melted</li>
+                <li>1 (8 ounce) package cream cheese, softened</li>
+                <li>
+                  1 (14 ounce) can chocolate-flavored sweetened condensed milk
+                </li>
+                <li>2 eggs</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1/2 teaspoon peppermint extract</li>
+                <li>1/2 cup semisweet chocolate chips</li>
+                <li>3 teaspoons vegetable oil</li>
+                <li>2 tablespoons crushed peppermint candies</li>
+              </ul>
             </section>
           </div>
           <div class="col-lg-6 col-md-6">
-           <section class="method"> <h4>Method</h4>
-            <br /><br />
-            <p>
-              <b>Step 1</b> <br /><br />
-               <br /><br />
-
-            </p></section>
+            <section class="method">
+              <h4>Method</h4>
+              <ul>
+                <li>Step 1</li>
+                <p>
+                  Preheat oven to 325 degrees F (165 degrees C). Line 18 muffin
+                  cups with foil baking cups.
+                </p>
+                <li>Step 2</li>
+                <p>
+                  Combine chocolate wafer crumbs and butter in a medium bowl;
+                  divide mixture evenly among the prepared muffin cups, pressing
+                  firmly to form crusts.
+                </p>
+                <li>Step 3</li>
+                <p>
+                  Bake in the preheated oven until set, about 6 minutes. Let
+                  cool completely, about 30 minutes. Keep oven on.
+                </p>
+                <li>Step 4</li>
+                <p>
+                  Beat cream cheese in a bowl with an electric mixer on medium
+                  speed until fluffy. Beat in sweetened condensed milk, eggs,
+                  vanilla extract, and peppermint extract into a smooth filling.
+                  Divide filling evenly over the cooled crusts.
+                </p>
+                <li>Step 5</li>
+                <p>
+                  Bake in the preheated oven until filling is set, 20 to 25
+                  minutes. Cool completely, about 1 hour. Remove foil baking
+                  cups gently.
+                </p>
+                <li>Step 6</li>
+                <p>
+                  Melt chocolate chips in a microwave-safe glass or ceramic bowl
+                  in 15-second intervals, stirring after each melting, 1 to 3
+                  minutes. Drizzle melted chocolate over cheesecake bites and
+                  sprinkle with peppermint candies. Chill in the refrigerator
+                  for 1 hour.
+                </p>
+              </ul>
+            </section>
           </div>
         </div>
       </div>
