--- a/bacondate.html
+++ b/bacondate.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/recipe.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bacon and Date Appetizer</title>
   </head>
 
   <body>
@@ -103,67 +103,41 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img
-            id="pic"
-            src="http://images.media-allrecipes.com/userphotos/560x315/3489951.jpg"
-            alt=""
-          />
+          <img id="pic" src="./img/dates.jpg" alt="" />
           <div class="col-lg-10 justify-content-center row align-items-center">
-            <h3 id="head">Rigatoni alla Genovese</h3>
+            <h3 id="head">Bacon and Date Appetizer</h3>
           </div>
         </div>
 
         <div class="row align-items-start justify-content-center">
           <div class="col-lg-6 col-md-6">
             <section class="bordered">
-            <h4>Ingredients</h4>
-            <br /><br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
+              <h4>Ingredients</h4>
+              <br /><br />
+              <li>1 (8 ounce) package pitted dates</li>
+              <br />
+              <li>4 ounces almonds</li>
+              <br />
+              <li>1 pound sliced bacon</li>
+              <br />
             </section>
           </div>
           <div class="col-lg-6 col-md-6">
-           <section class="method"> <h4>Method</h4>
-            <br /><br />
-            <p>
-              <b>Step 1</b> <br /><br />
-               <br /><br />
-
-            </p></section>
+            <section class="method">
+              <h4>Method</h4>
+              <br /><br />
+              <p>
+                <b>Step 1</b> <br /><br />
+                Preheat the broiler.
+                <br /><br />
+                <b>Step 2</b> <br /><br />
+                Slit dates. Place one almond inside each date. Wrap dates with
+                bacon, using toothpicks to hold them together.
+                <br /><br />
+                <b>Step 3</b> <br /><br />
+                Broil 10 minutes, or until bacon is evenly brown and crisp.
+              </p>
+            </section>
           </div>
         </div>
       </div>
