--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!--Diego Section-->
 
     <main>
-      <h1>Cuisine a la Group 1</h1>
+      <h1>Cuisine à la Group One</h1>
 
       <div class="grid container-fluid">
         <div class="row">
@@ -175,7 +175,7 @@
           <div class="recipe-container col-lg-4">
             <a href="drinks.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img src="./img/Classic-Old-Fashioned.webp" alt="food" />
               </div>
               <h2>Classic Old Fashioned</h2>
             </a>
@@ -184,7 +184,7 @@
           <div class="recipe-container col-lg-4">
             <a href="drinks.html">
               <div class="img-container">
-                <img src="./img/placeholder-2.jpg" alt="food" />
+                <img src="./img/moscowmule.jpg" alt="food" />
               </div>
               <h2>Moscow Mule</h2>
             </a>
