--- a/mushrooms.html
+++ b/mushrooms.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/recipe.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Stuffed Mushrooms</title>
   </head>
 
   <body>
@@ -103,11 +103,7 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img
-            id="pic"
-            src="http://images.media-allrecipes.com/userphotos/560x315/3489951.jpg"
-            alt=""
-          />
+          <img id="pic" src="./img/mushrooms.jpg" alt="" />
           <div class="col-lg-10 justify-content-center row align-items-center">
             <h3 id="head">Rigatoni alla Genovese</h3>
           </div>
@@ -116,54 +112,60 @@
         <div class="row align-items-start justify-content-center">
           <div class="col-lg-6 col-md-6">
             <section class="bordered">
-            <h4>Ingredients</h4>
-            <br /><br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
+              <h4>Ingredients</h4>
+              <br /><br />
+              <li>1 (16 ounce) package whole white button mushrooms</li>
+              <br />
+              <li>2 scallions</li>
+              <br />
+              <li>4 ounces cream cheese, softened</li>
+              <br />
+              <li>¼ cup finely shredded sharp Cheddar cheese</li>
+              <br />
+              <li>¼ teaspoon ground paprika</li>
+              <br />
+              <li>1 pinch salt</li>
+              <br />
+              <li>cooking spray</li>
+              <br />
             </section>
           </div>
           <div class="col-lg-6 col-md-6">
-           <section class="method"> <h4>Method</h4>
-            <br /><br />
-            <p>
-              <b>Step 1</b> <br /><br />
-               <br /><br />
-
-            </p></section>
+            <section class="method">
+              <h4>Method</h4>
+              <br /><br />
+              <p>
+                <b>Step 1</b> <br /><br />
+                Using a damp cloth, gently clean mushrooms. Remove stems and
+                discard.
+                <br /><br />
+                <b>Step 2</b> <br /><br />
+                Mince scallions and separate white and green parts.
+                <br /><br />
+                <b>Step 3</b> <br /><br />
+                Preheat an air fryer to 360 degrees F (182 degrees C).
+                <br /><br />
+                <b>Step 4</b> <br /><br />
+                Combine cream cheese, Cheddar cheese, the white parts from the
+                scallions, paprika, and salt in a small bowl. Stuff filling into
+                the mushrooms, pressing it in to fill the cavity with the back
+                of a small spoon.
+                <br /><br />
+                <b>Step 5</b> <br /><br />
+                Spray the air fryer basket with cooking spray and set mushrooms
+                inside. Depending on the size of your air fryer, you may have to
+                do 2 batches.
+                <br /><br />
+                <b>Step 6</b> <br /><br />
+                Cook mushrooms until filling is lightly browned, about 8
+                minutes. Repeat with remaining mushrooms.
+                <br /><br />
+                <b>Step 7</b> <br /><br />
+                Sprinkle mushrooms with scallion greens and let cool for 5
+                minutes before serving.
+                <br /><br />
+              </p>
+            </section>
           </div>
         </div>
       </div>
