--- a/cremebrulee.html
+++ b/cremebrulee.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/recipe.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Creme Brulee</title>
   </head>
 
   <body>
@@ -103,67 +103,62 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img
-            id="pic"
-            src="http://images.media-allrecipes.com/userphotos/560x315/3489951.jpg"
-            alt=""
-          />
+          <img id="pic" src="./img/brulee.jpg" alt="" />
           <div class="col-lg-10 justify-content-center row align-items-center">
-            <h3 id="head">Rigatoni alla Genovese</h3>
+            <h3 id="head">Creme Brulee</h3>
           </div>
         </div>
 
         <div class="row align-items-start justify-content-center">
           <div class="col-lg-6 col-md-6">
             <section class="bordered">
-            <h4>Ingredients</h4>
-            <br /><br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
-            <li></li>
-            <br />
+              <h4>Ingredients</h4>
+              <ul>
+                <li>3 tablespoons white sugar</li>
+                <li>1 cup heavy cream</li>
+                <li>3 egg yolks</li>
+                <li>1/4 teaspoon vanilla extract</li>
+                <li>2 tablespoons white sugar, divided</li>
+              </ul>
             </section>
           </div>
           <div class="col-lg-6 col-md-6">
-           <section class="method"> <h4>Method</h4>
-            <br /><br />
-            <p>
-              <b>Step 1</b> <br /><br />
-               <br /><br />
-
-            </p></section>
+            <section class="method">
+              <h4>Method</h4>
+              <ul>
+                <li>Step 1</li>
+                <p>Preheat oven to 350 degrees F (175 degrees C).</p>
+                <li>Step 2</li>
+                <p>
+                  Whisk 3 tablespoons sugar and cream in a microwave-safe bowl
+                  until well combined; heat the mixture in microwave until warm,
+                  1 to 2 minutes, and whisk again to dissolve sugar. Whisk in
+                  egg yolks and vanilla extract until smooth.
+                </p>
+                <li>Step 3</li>
+                <p>
+                  Pour cream mixture into 2 ramekins. Set ramekins into a
+                  roasting pan and pour in enough hot water to reach halfway up
+                  the sides of the ramekins.
+                </p>
+                <li>Step 4</li>
+                <p>
+                  Bake in the preheated oven until creme desserts are set but
+                  still slightly jiggly when shaken, about 50 minutes. Remove
+                  ramekins from hot water and chill in refrigerator until cold,
+                  at least 2 hours.
+                </p>
+                <li>Step 5</li>
+                <p>
+                  Sprinkle 1 tablespoon of sugar evenly over the top of each
+                  dessert. Use a kitchen torch to lightly toast and melt the
+                  sugar topping until brown and bubbly, about 30 seconds. Let
+                  the sugar topping cool before serving. To serve, use a spoon
+                  to crack the crisp sugar open to reveal the creamy dessert
+                  underneath.
+                </p>
+              </ul>
+            </section>
           </div>
         </div>
       </div>
